--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="row nav-bar">
 						<div class="column width-12 nav-bar-inner">
 							<div class="logo">
-								<div class="logo-inner" style="backdrop-filter: blur(6px) brightness(2) contrast(.7);">
+								<div class="logo-inner" style="backdrop-filter: blur(6px) brightness(2) contrast();">
 									<a href="index.html"><img src="logo.png" alt="Renard Logo" /></a>
 									<a href="index.html"><img src="logo.png" alt="Renard Logo" /></a>
 								</div>
