--- a/index.html
+++ b/index.html
@@ -394,8 +394,7 @@
 								data-animate-in="preset:slideInRightShort;duration:1000ms;delay:400ms;easing:easeFastSlow;"
 								data-threshold="0.5">
 								<div class="stats-1 left">
-									<img src="https://cubing.rocks/gallery/homepage.png" width="760" height="500"
-										alt="" />
+									<img src="propic.jpeg" width="760" height="500" alt="" />
 								</div>
 							</div>
 						</div>
