--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </head>
 
 <body class="shop home-page">
-
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_HK/sdk.js#xfbml=1&version=v7.0"
+		nonce="aogskhuY"></script>
 	<!-- Side Navigation Menu -->
 	<aside class="side-navigation-wrapper enter-right" data-no-scrollbar data-animation="scale-in">
 		<div class="side-navigation-scroll-pane">
@@ -455,28 +457,14 @@
 																tabindex="2">
 														</div>
 													</div>
-													<div class="column width-6">
+													<div class="column width-12">
 														<div class="field-wrapper">
 															<input type="email" name="email"
 																class="form-email form-element"
 																placeholder="Email address*" tabindex="3" required>
 														</div>
 													</div>
-													<div class="column width-6">
-														<div class="field-wrapper">
-															<div class="form-select form-element">
-																<select name="budget" tabindex="4" class="form-aux"
-																	data-label="Project Budget">
-																	<option selected="selected" value="">Project Budget
-																	</option>
-																	<option value="">$500-$1000</option>
-																	<option value="">$1000-$2000</option>
-																	<option value="">$2000-$3500</option>
-																	<option value="">$5000+</option>
-																</select>
-															</div>
-														</div>
-													</div>
+													
 													<div class="column width-6">
 														<input type="text" name="honeypot"
 															class="form-honeypot form-element">
@@ -498,6 +486,7 @@
 									</div>
 								</div>
 							</div>
+							
 						</div>
 					</div>
 					<!-- Form End -->
@@ -520,7 +509,13 @@
 									<li><a href="#">Twitter</a> -</li>
 									<li><a href="#">Facebook</a></li>
 								</ul> -->
-								<p class="copyright clear-float">
+							<div class="fb-page " data-href="https://www.facebook.com/vincitang.support/" data-tabs="timeline" data-width=""
+								data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+								data-show-facepile="true">
+								<blockquote cite="https://www.facebook.com/vincitang.support/" class="fb-xfbml-parse-ignore"><a
+										href="https://www.facebook.com/vincitang.support/">Vinci Tang 保險索償支援</a></blockquote>
+							</div>
+								<p class="copyright clear-float" style="margin-top: 20px;">
 									&copy; 2020 Vinci Tang
 								</p>
 							</div>
