--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
 					<!-- Hero 2 End -->
 
 					<!-- Form -->
-					<div class="section-block replicable-content contact-2">
-						<div class="row">
+					<div class="section-block replicable-content contact-2" style="background-image: url('agent2.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+						<div class="row" style="opacity: .7;">
 							<div class="column width-12">
 								<div class="row">
 									<div class="column width-9 offset-3">
@@ -476,7 +476,7 @@
 															<textarea name="message" class="form-message form-element"
 																placeholder="Message*" tabindex="5" required></textarea>
 														</div>
-														<input type="submit" value="Send Email"
+														<input type="submit" value="Send"
 															class="form-submit button bkg-charcoal bkg-hover-theme color-white color-hover-white">
 													</div>
 												</div>
