--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@
 				</section>
 
 				<!-- Contact -->
-				<section id="contact">
+				<section id="contact" style="background-image: url('agent2fix.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
 
 					<!-- Hero 2 -->
-					<div class="section-block hero-1 hero-1-1 small color-charcoal-light bkg-grey-ultralight">
+					<div class="section-block hero-1 hero-1-1 small color-charcoal-light bkg-grey-ultralight" style="opacity: .9;" >
 						<div class="row">
 							<div class="column width-12">
 								<div class="hero-content">
@@ -434,12 +434,12 @@
 					<!-- Hero 2 End -->
 
 					<!-- Form -->
-					<div class="section-block replicable-content contact-2" style="background-image: url('agent2.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
-						<div class="row" style="opacity: .7;">
+					<div class="section-block replicable-content contact-2" style="background-image: url('agent2fix.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; background-color: black;" >
+						<div class="row" style="opacity: .8;">
 							<div class="column width-12">
 								<div class="row">
 									<div class="column width-9 offset-3">
-										<div class="contact-form-container">
+										<div class="contact-form-container" >
 											<form class="contact-form" action="php/send-email.php" method="post"
 												novalidate>
 												<div class="row">
@@ -477,7 +477,7 @@
 																placeholder="Message*" tabindex="5" required></textarea>
 														</div>
 														<input type="submit" value="Send"
-															class="form-submit button bkg-charcoal bkg-hover-theme color-white color-hover-white">
+															class="form-submit button bkg-charcoal bkg-hover-theme color-white color-hover-white" style="width: 100%;">
 													</div>
 												</div>
 											</form>
