--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
 		</div> -->
 
 
-		<div id="customerpage" class="section padding-top-bottom-small " data-aos="fade-up">
+		<div id="customerpage" class="section padding-top-bottom-small  " data-aos="fade-up">
 			<div class="container">
 				<!-- <div class="twelve columns">
 						<h5>中小企客戶認可</h5>
 					
 				</div> -->
-				<div class="header-text main-pages">
+				<div class="header-text main-pages" style="margin-top: 50px;">
 					<p>中小企客戶認可</p>
 					<!-- <h3>We use cutting-edge tech and cutting-edge thinking to bring brands to life online.</h3> -->
 				</div>
