--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<div class="section full-height" id="home">
 		
 			<div class="hero-top">
-				<div class="container" style="-webkit-backdrop-filter: blur(8px) brightness(50%); padding-top: 50px; backdrop-filter: blur(13px) contrast(30%) brightness(140%) ;">			
+				<div class="container" style="-webkit-backdrop-filter: blur(13px) contrast(30%) brightness(140%) ; padding-top: 50px; backdrop-filter: blur(13px) contrast(30%) brightness(140%) ;">			
 					<div class="twelve columns">
 						<p>Vinci Tang</p>	
 						<h2>個人及中小企 <br>專業財務策劃師</h2>
