--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 					<div class="cd-slider-wrapper">
 						<ul class="cd-slider">
 							<li class="selected"><img style="opacity: .8;" src="propic.jpeg" alt=""></li>
-							<li class=""><img style="opacity: .8;" src="propic1.JPG" alt=""></li>
-							<li class=""><img style="opacity: .8;" src="propic2.JPG" alt=""></li>
+							<!-- <li class=""><img style="opacity: .8;" src="propic1.JPG" alt=""></li>
+							<li class=""><img style="opacity: .8;" src="propic2.JPG" alt=""></li> -->
 						</ul> <!-- cd-slider -->
 		
 						<ul class="cd-slider-navigation">
