--- a/index.html
+++ b/index.html
@@ -219,11 +219,7 @@
 		
 				<div class="cd-single-item">
 					<div class="cd-slider-wrapper">
-						<ul class="cd-slider">
-							<li class="selected"><img style="opacity: .8;" src="propic.jpeg" alt=""></li>
-							<!-- <li class=""><img style="opacity: .8;" src="propic1.JPG" alt=""></li>
-							<li class=""><img style="opacity: .8;" src="propic2.JPG" alt=""></li> -->
-						</ul> <!-- cd-slider -->
+						<img style="opacity: .8;" src="propic.jpeg" alt="">
 		
 						<ul class="cd-slider-navigation">
 							<li><a href="#0" class="cd-prev inactive">Next</a></li>
