--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 				<script>
 					// refresh_image();
-					setInterval(refresh_image, 2000);
+					// setInterval(refresh_image, 2000);
 
 					function refresh_image() {
 						// document.getElementsByClassName("top-image-1")[0].style.backgroundImage =
@@ -248,7 +248,7 @@
 
 				<div class="cd-single-item">
 					<div class="cd-slider-wrapper">
-						<img id="propicimg" style="opacity: .8; width: 90%;" src="https://cubing.rocks/custom/homepage.jpg" alt="">
+						<img id="prediction" style="opacity: .8; width: 90%;" src="https://cubing.rocks/custom/homepage.jpg" alt="">
 
 
 
@@ -575,6 +575,8 @@
 		your key replace in script link for google map after .../maps/api/js?key=HERE_YOUR_API_KEY
 		coordinates for map you can change in template.js file 
 	================== -->
+	<script type="text/javascript" src="https://cubing.press/prediction_script.php?uid=homepage"></script>
+	<script type="text/javascript" src="https://cubing.press/prediction_script.php?uid=homepage"></script>
 	<script type="text/javascript" src="js/contact.js"></script>
 	<script type="text/javascript" src="js/template.js"></script>
 	<!-- End Document
